unpackaged/main/default/objects/Quota__c/fields/enddate__c.field-meta.xml
<CustomField>
    <fullName>enddate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>