unpackaged/main/default/objects/Quota__c/fields/firstofmonth__c.field-meta.xml
<CustomField>
    <fullName>firstofmonth__c</fullName>
    <label>First of Month</label>
    <type>Date</type>
</CustomField>