unpackaged/main/default/objects/Quota__c/fields/monthly_bookings_goal__c.field-meta.xml
<CustomField>
    <fullName>monthly_bookings_goal__c</fullName>
    <label>Monthly Bookings Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>