unpackaged/main/default/objects/Quota__c/fields/owner_id__c.field-meta.xml
<CustomField>
    <fullName>owner_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotas</relationshipName>
    <type>Lookup</type>
</CustomField>