unpackaged/main/default/objects/Quota__c/fields/Ramping__c.field-meta.xml
<CustomField>
    <fullName>Ramping__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true, user is on a ramp schedule.</inlineHelpText>
    <label>Ramping</label>
    <type>Checkbox</type>
</CustomField>