unpackaged/main/default/objects/Quota__c/fields/rep_type_name__c.field-meta.xml
<CustomField>
    <fullName>rep_type_name__c</fullName>
    <label>User Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>AE-II</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>EAM</fullName>
            </value>
            <value>
                <fullName>EBDR</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>SAE</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>SAM</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>TSE</fullName>
            </value>
            <value>
                <fullName>VMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>