unpackaged/main/default/objects/Quota__c/fields/startdate__c.field-meta.xml
<CustomField>
    <fullName>startdate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>