unpackaged/main/default/objects/Quota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>owner_id__c</columns>
    <columns>firstofmonth__c</columns>
    <columns>startdate__c</columns>
    <columns>enddate__c</columns>
    <columns>monthly_bookings_goal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>